# spectrobinarystarsystem

./: .gitignore  LICENSE  README.md  bss.config.yaml  bss.py  factory.py  requirements.txt  setup.cfg  test.py
disentangling/: alphadra_20220513233026_gbertrand.fits  alphadra_20220527213355_gbertrand.fits  alphadra_20220602215240_gbertrand.fits  alphadra_20220608211443_gbertrand.fits  alphadra_20220611211237_gbertrand.fits  alphadra_20220613211820_gbertrand.fits  alphadra_20220616205603_gbertrand.fits  alphadra_20221021184854_gbertrand.fits  alphadra_20230305202003_aleduc.fits  alphadra_20230322193823_aleduc.fits  alphadra_20230326204416_aleduc.fits  alphadra_20230327203524_aleduc.fits  alphadra_20230328193215_aleduc.fits  alphadra_20230330192112_aleduc.fits  alphadra_20230402194337_aleduc.fits  alphadra_20230404191632_aleduc.fits  alphadra_20230404223538_bchristian.fits  alphadra_20230405012157_bchristian.fits  alphadra_20230406010825_bchristian.fits  alphadra_20230406203307_bchristian.fits  alphadra_20230407191728_aleduc.fits  alphadra_20230407194422_xdupont.fits  alphadra_20230408195713_bchristian.fits  alphadra_20230408215925_bchristian.fits  alphadra_20230409192225_bchristian.fits  alphadra_20230409195418_aleduc.fits  alphadra_20230411190321_bchristian.fits  alphadra_20230416022952_bchristian.fits  alphadra_20230417190807_bchristian.fits  alphadra_20230417201023_ebertrand.fit  alphadra_20230417202309_xdupont.fits  alphadra_20230418193857_bchristian.fits  alphadra_20230419014838_rdiz.fits  alphadra_20230419184939_aleduc.fits  alphadra_20230419191118_bchristian.fits  alphadra_20230419195451_xdupont.fits  alphadra_20230419201040_vlecocq.fits  alphadra_20230419202227_ebertrand.fit  alphadra_20230420200710_vlecocq.fits  alphadra_20230421191545_bchristian.fits  (+64 more)
docs/: bss_results.txt
examples/alphadra/: _alp_dra_20230407_822.fits  _hd123299_20220513_979.fits  _hd123299_20220602_912.fits  _hd123299_20220611_884.fits  _hd123299_20230326_864.fits  _hd123299_20230328_814.fits  _hd123299_20230330_806.fits  _hd123299_20230404_803.fits  _hd123299_20230507_855.fits  alphadra_20220513233026_gbertrand.fits  (+230 more)
sandbox/: rv_error.py  test.md  tomo.py
spectroscopicbinarysystem/: __init__.py  spectroscopicbinarysystem.py
(+24 files in other folders)
