[metadata]
name = SpectroscopicBinarySystem
version = 1.0.3
author = Guillaume Bertrand
author_email = gbe.io@pm.me
description = Python astronomy tools for spectroscopic binary system
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_files = LICENSE
keywords = astronomy,astrophysics,science,fits,models,fitting,spectroscopy,spectrum

[options]
packages = find:
python_requires = >=3.9
install_requires =
    astropy==5.2.*
    astroquery==0.4.*
    BinaryStarSolver==1.2.*
    matplotlib==3.7.*
    numpy==1.24.*
    orbital==0.0.0
    OrbitalPy==0.7.0
    PyYAML==6.0.*
    specutils==1.9.*
    plotly==5.14.*

[options.packages.find] 
include=spectroscopicbinarysystem/* 
exclude =
    examples*
    docs*
    test*
