[metadata]
name = SpectroscopicBinarySystem
version = 1.1.3
author = Guillaume Bertrand
author_email = gbe.io@pm.me
description = Python astronomy tools for spectroscopic binary system
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_files = LICENSE
keywords = astronomy,astrophysics,science,fits,models,fitting,spectroscopy,spectrum

[options]
packages = find:
python_requires = >=3.10
install_requires =
    astropy>=5.2.2
    astroquery>=0.4.6
    BinaryStarSolver>=1.2.0
    matplotlib>=3.7.1
    numpy>=1.24.2
    OrbitalPy>=0.7.0
    PyYAML>=6.0
    specutils>=1.9.1
    BinaryStarSolver>=1.2.0
    plotly>=5.14.1
